# dagobert

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/dagobert/: __init__.py  evaluators.py  live.py  operators.py  population.py  replicator.py  rng.py  selection.py  selectors.py  variators.py  vector_replicator.py
src/dagobert/datasets/: test_data.csv
src/dagobert/replicators/: __init__.py  dag_replicator.py  vector_replicator.py
src/dagobert/utils/: dag_utils.py
src/gui/: main.py  test_gui.py
tests/: test_dag_replicator.py  test_evolution.py
